--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,3 +25,4 @@ jobs:
           service-ports: "8000:http"
           service-routes: "/:8000"
           skip-cache: true
+          service-instance-type: free
