--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,17 @@ serde_json = "1.0.127"
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[build]
+jobs = 1
+
+[term]
+quiet = true
+color = 'never'
+
+[profile.release]
+opt-level = 1
+codegen-units = 4
+strip = "symbols"
+panic = "abort"
+lto = "off"
